# aligned-vnns

./: .gitignore  Cargo.toml  README.md  aligned.sh
.github/workflows/: prove.yml
aggregator/: Cargo.toml
aggregator/src/: main.rs
aligned_verification_data/: 395a4456_0.cbor  395a4456_0.json  4c855217_0.cbor  4c855217_0.json  56a9b870_0.cbor  56a9b870_0.json  56a9b870_0.txt  6373f455_0.cbor  6373f455_0.json  6742779c_0.cbor  6742779c_0.json  6cab92c0_0.cbor  6cab92c0_0.json  6caefdb2_0.cbor  6caefdb2_0.json  6cd22ec2.txt  6cd22ec2_0.cbor  6cd22ec2_0.json  7ed9ac7f_0.cbor  7ed9ac7f_0.json  934f4292_0.cbor  934f4292_0.json  9ab91e07_0.cbor  9ab91e07_0.json  README.md  a54612e1_0.cbor  a54612e1_0.json  bb669053_0.cbor  bb669053_0.json  bc44917d_0.cbor  bc44917d_0.json  f404e0f9_1.cbor  f404e0f9_1.json  fdbada22_0.cbor  fdbada22_0.json
data/: foods-med.index.json  foods-med.json  foods-med.query.json  foods-small.index.json  foods-small.json  foods-small.query.json  foods-smol.index.json  foods-smol.json  foods-smol.query.json  foods.index.json  foods.json  foods.query.json
elf/: riscv32im-succinct-aggregator-elf  riscv32im-succinct-vnns-elf  riscv32im-succinct-zkvm-elf
embedder/: Cargo.toml  README.md
embedder/src/: lib.rs  main.rs
lib/: Cargo.toml
lib/src/: hora.rs  lib.rs
program/: Cargo.toml
program/src/: main.rs
script/: Cargo.toml  build.rs
script/src/: main.rs
