[package]
version = "0.1.0"
name = "zkvdb-script"
edition = "2021"
default-run = "zkvdb"

[[bin]]
name = "zkvdb"
path = "src/bin/main.rs"

# can probably remove this
[[bin]]
name = "evm"
path = "src/bin/evm.rs"

[dependencies]
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git", tag = "v1.0.1" }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0.200", default-features = false, features = ["derive"] }
clap = { version = "4.0", features = ["derive", "env"] }
tracing = "0.1.40"
bincode = "1.3.3"
sha2.workspace = true

zkvdb-lib = { path = "../lib" }
zkvdb-embedder = { path = "../embedder" }

hex.workspace = true

[build-dependencies]
sp1-helper = "1.0.1"
